--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,8 +26,9 @@
   <body>
     <div class="container">
       <h1 class="text-center my-4">Рибка на продаж</h1>
-
-      <a class="btn btn-success" href="/fish/create">Додати рибки</a>
+      <div sec:authorize="hasRole('ADMIN')">
+          <a class="btn btn-success" href="/fish/create">Додати рибки</a>
+      </div>
 
       <table class="table">
         <thead>
@@ -46,12 +47,16 @@
             <td th:text="${fish.name}"></td>
             <td th:text="${fish.price} + '₴'"></td>
             <td th:text="${fish.catchDate.toString().substring(0,10)}"></td>
-            <td>
-              <a class="btn btn-success" th:href="@{'/fish/' + ${fish.id}}" onclick="return confirm('Подивитися?')">Фото</a>
-            </td>
-            <td>
-              <a class="btn btn-danger btn-sm" th:href="@{/fish/delete(id=${fish.id})}" onclick="return confirm('Ви впевнені?')">Прибрати</a>
-            </td>
+            <div sec:authorize="hasRole('ADMIN')">
+              <td>
+                <a class="btn btn-success" th:href="@{'/fish/' + ${fish.id}}" onclick="return confirm('Подивитися?')">Фото</a>
+              </td>
+            </div>
+            <div sec:authorize="hasRole('ADMIN')">
+             <td>
+               <a class="btn btn-danger btn-sm" th:href="@{/fish/delete(id=${fish.id})}" onclick="return confirm('Ви впевнені?')">Прибрати</a>
+             </td>
+            </div>
           </tr>
         </tbody>
       </table>
